<resources>
    <string name="app_name">MySpace App</string>

    <!--exit notification-->
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="activity_select_friend">Select Friend</string>

    <string name="my_name">John Miller</string>
    <string name="me_mail">john.miller@mail.com</string>
    <string name="tab_feed">Feeds</string>
    <string name="tab_friend">Friends</string>
    <string name="tab_message">Messages</string>
    <string name="tab_notif">Notifications</string>
    <string name="tab_profile">Profile</string>
    <string name="avatar_source">http://www.designskilz.com/</string>
    <string name="btn_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="btn_sign_up">Register</string>
    <string name="hint_city">City</string>
    <string name="hint_country">Country</string>
    <string name="hint_name">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="text_registration">Registration</string>
    <string name="hint_studentNo">Student Number</string>
    <string name="student_no">Student Number</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="str_nav_inbox">Complaints</string>
    <string name="str_nav_complaint">Complaints</string>
    <string name="str_nav_extra">Extras</string>
    <string name="str_nav_notifications">Notifications</string>
    <string name="str_nav_profile">Profile</string>
    <string name="str_nav_setting">Settings</string>
    <string name="str_nav_help">Help</string>
    <string name="sub_items">Sub items</string>
    <string name="title_activity_activity_login">Login</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis</string>
    <string name="err_msg_email">Please Enter A Valid Email Address</string>
    <string name="inv_msg_password">Password must be at least 8 characters</string>
    <string name="err_msg_password">Password required</string>
    <string name="err_msg_name">Please enter First Name</string>
    <string name="err_msg_lastname">Please enter Last Name</string>
    <string name="err_msg_studentNo">Please enter student number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_in">Login</string>
    <string name="err_msg_confirm_password">Passwords do not match</string>
    <string name="btn_register">Register</string>
    <string name="str_nav_logout">Logout</string>
    <string name="str_room_no">Room No.</string>
    <string name="str_comment">Comment</string>
    <string name="btn_send_comment">File Complaint</string>
    <string name="str_attach_images">Attach Images</string>
    <string name="str_complaint_text">File New Complaint</string>
    <string name="date">01-05-2018</string>
    <string name="err_msg_room">Please Enter Room Number</string>
    <string name="err_msg_complaint">Please Enter Complaint</string>
    <string name="str_extra_price">R 1000</string>
    <string name="str_extra_name">Extra Name</string>
    <string name="str_version">Version 1.1.3</string>
    <string name="hint_phone">Cellphone</string>
    <string name="hint_room_number">Room Number</string>
    <string name="btn_update_profile">Update Profile</string>
    <string name="dialog_message">Are you sure you want to delete this complaint from your list?</string>
    <string name="dialog_title">Delete Complaint</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="str_request">Request</string>
    <string name="request_title">Request Items</string>
    <string name="request_message">Are you sure you want to request the selected items?</string>
    <string name="request_success">Items Requested Successfully</string>
    <string name="str_nav_checkins">Move-ins</string>
    <string name="next">Next</string>
    <string name="skip">Back</string>
    <string name="start">Done</string>
    <string name="name">Name</string>
    <string name="str_check_items">Check Items</string>
    <string name="str_inventory_condition">Inventory Condition</string>
    <string name="str_take_images">Take Images</string>
    <string name="btn_next">Save</string>
    <string name="str_header_extra">Choose an item below</string>
    <string name="str_header_myextra">My Extras</string>
    <string name="str_notif">Nothing Selected</string>
    <string name="str_home">Home</string>
    <string name="billing_information">Billing Information</string>
    <string name="tab_complaints">Complaints</string>
    <string name="tab_requests">Requests</string>
    <string name="tab_users">Users</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="tab_checkins">Check-ins</string>
    <string name="str_nav_users">Users</string>
    <string name="str_complaints">Complaints</string>
    <string name="channel_Id">MY_SPACE_CH_01</string>
    <string name="channel_description">MY_SPACE_CH_DESC</string>
    <string name="tab_notifications">Notifications</string>
    <string name="str_complaint_message">Complaint Filed Successfully</string>
    <string name="str_extra_message">Request Successful, Will get back to you soon</string>
    <string name="str_checkin_message">Checked in Successfully</string>
    <string name="logout_message">Are you sure you want to Logout?</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="submit">Submit</string>
    <string name="first_name_holder">firstname</string>
    <string name="last_name_holder">lastname</string>
    <string name="email_holder">example@email.com</string>
    <string name="cellnumber_holder">071 234 5678</string>
    <string name="residence_holder">Your Residence</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="name_placeholder">%1$s %2$s</string>
    <string name="err_city_msg">Please select a valid city</string>
    <string name="err_residence_msg">Please select a valid residence name</string>
    <string name="move_in_checkinList">Move In Checklist</string>
    <string name="move_in_images">Take Images</string>
    <string name="request_items">Requested Items</string>
    <string name="str_btn_request">REQUEST</string>
    <string name="str_complaints_title">COMPLAINTS</string>
    <string name="requests">REQUESTS</string>
    <string name="filed_complaints">%1$s, Filed Complaints</string>
    <string name="items_requested">%1$s, Items Requested</string>
    <string name="file_complaint">FILE COMPLAINT</string>
    <string name="str_nav_home">Home</string>
    <string name="complaint_delete_success">Complaint Deleted Successfully</string>
    <string name="app_ad_name">MySpace By MetroRez</string>
    <string name="no_complaints">No Complaints Filed</string>
    <string name="str_extra_comments">Extra Comments</string>
    <string name="hint_comments">Extra Comments</string>
    <string name="tab_moveins">Move-Ins</string>
    <string name="choose_item">Choose Request</string>
    <string name="hint_job_req">What Kind Of job Are you looking for?</string>
    <string name="friend_name">Friend Name</string>
    <string name="hint_friend_lastname">Friend Lastname</string>
    <string name="hint_idNo">Id / Passport Number</string>
    <string name="err_msg_id_no">Invalid Number of Characters</string>
    <string name="btn_reset">Reset</string>
    <string name="email_sent">Password reset link sent, Please Check Your Emails</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="update_profile">Update Profile</string>
    <string name="error_message">Please Update Residence Information Under Profile</string>
    <string name="movein_error_message">Please Update Residence Information Under Profile In Order to Move In.</string>
    <string name="str_gym_request">Gym Access Request Successful, we\'ll get back to you</string>

    <string name="str_message_body"><h1>Gym Access Request</h1>\n \n <b>From:</b> %1$s \n <b>Gender:</b> %2$s
        \n <b>Id Number:</b> %3$s \n <b>Email:</b> %4$s \n <b>Branch:</b> %5$s \n <b>City:</b> %6$s
        \n <b>Residence:</b> %7$s \n <b>Room:</b> %8$s \n <b>Date:</b> %9$s </string>

    <string name="str_sleepover_msg_body">
        <h1>Sleepover Request</h1> \n \n <b>From:</b> %1$s \n <b>For: </b>%2$s \n <b>Friend Gender:</b> %3$s
        \n<b>City:</b> %4$s \n <b>Residence:</b> %5$s \n <b>Room:</b> %6$s \n <b>From Date:</b> %7$s  \n <b>To Date:</b> %8$s
    </string>

    <string name="str_job_request_msg_body">
        <h1>Job Request</h1>\n \n <b>From:</b> %1$s \n <b>Job Type:</b> %2$s \n <b>City:</b> %3$s
        \n <b>Residence:</b> %4$s \n <b>Room:</b> %5$s \n <b>Date:</b> %6$s
    </string>

    <string name="request_gym_title">Request Gym Access</string>
    <string name="request_gym_message">Are you sure you want to request gym access?</string>
    <string name="str_about_text">Welcome to MetroRez student accommodation. we know students want the best so we are always a step ahead</string>
    <string name="str_no_moveins_added">No MoveIns Added</string>
    <string name="request_sleepover_message">Are you sure you want to request sleepover, for a friend?</string>
    <string name="request_job_request_message">Are you sure you want to request a job?</string>
    <string name="str_image_placeholder">image_placeholder</string>
    <string name="str_move_in_date">MoveIn Date:</string>
    <string name="str_hide">HIDE</string>
    <string name="notif_delete_success">Notification deleted successfully</string>
    <string name="del_notif_dialog_title">Delete Notification</string>
    <string name="notif_dialog_message">Are you sure you want to delete this notification from your list?</string>
    <string name="str_no_notifications">No Notifications Yet</string>
    <string name="str_title">Title</string>
    <string name="str_nav_Responses">Responses</string>
</resources>
