<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/str_home"

            />
        <item
            android:id="@+id/nav_complaint"
            android:checked="true"
            android:icon="@drawable/ic_complaint"
            android:title="@string/str_nav_complaint"
            app:actionLayout="@layout/menu_counter_colored" />
        <item
            android:id="@+id/nav_extras"
            android:icon="@drawable/ic_extra"
            android:title="@string/str_nav_extra" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/bell"
            android:title="@string/str_nav_notifications"
            app:actionLayout="@layout/menu_counter" />

        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/ic_checkin"
            android:title="@string/str_nav_checkins" />
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/str_nav_setting" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/str_nav_logout" />
            </group>
        </menu>
    </item>
</menu>