<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/company_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/company_heading"
                        style="@android:style/Widget.DeviceDefault.Light.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="13dp"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView

                        android:id="@+id/company_Desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/company_heading"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/str_about_text" />
                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/homeCard_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_abstract"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:contentPaddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/heading"
                        style="@android:style/Widget.DeviceDefault.Light.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="13dp"
                        android:gravity="center_horizontal"
                        android:text="@string/str_complaints_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <ImageView
                        android:id="@+id/img_Exchange_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/heading"
                        android:src="@drawable/ic_home_compl" />


                    <TextView

                        android:id="@+id/no_complaints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_Exchange_home"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="1dp"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/filed_complaints" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_file_complaint"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="22dp"
                        android:layout_marginRight="22dp"
                        android:background="@drawable/btn_ripple_effect"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/file_complaint"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/ami_real"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeCard_id"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:contentPaddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/heading2"
                        style="@android:style/Widget.DeviceDefault.Light.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="13dp"
                        android:gravity="center_horizontal"
                        android:text="@string/requests"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_real_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/heading2"
                        android:src="@drawable/ic_home_req" />

                    <TextView

                        android:id="@+id/no_requests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_real_home"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:text="@string/items_requested" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btn_request"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="23dp"
                        android:layout_marginRight="23dp"
                        android:background="@drawable/btn_ripple_effect"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="@dimen/spacing_small"
                        android:text="@string/str_btn_request"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />


                </RelativeLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>
</ScrollView>