<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/complaint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:gravity="center"
            android:paddingBottom="@dimen/spacing_large"
            android:text="@string/str_complaint_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="@dimen/spacing_medium"
            app:cardCornerRadius="@dimen/spacing_medium"
            app:cardElevation="@dimen/spacing_xsmall"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="400dp"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xlarge">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/txtComment"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:ems="10"
                            android:hint="@string/str_comment"
                            android:inputType="textMultiLine"
                            android:maxLength="180"
                            android:maxHeight="300dp"
                            android:maxLines="5" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageTaken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_mlarge"
                    android:paddingBottom="@dimen/spacing_mlarge">

                    <Spinner
                        android:id="@+id/spinner_priority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_attach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:layout_weight="1"
                        android:text="@string/str_attach_images"
                        android:textColor="@color/material_grey_600" />

                    <ImageButton
                        android:id="@+id/camera_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@drawable/btn_ripple_effect"
                        android:src="@android:drawable/ic_menu_camera"
                        android:visibility="gone" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xlarge">

                    <com.balysv.materialripple.MaterialRippleLayout
                        style="@style/RippleStyleWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent">

                        <Button
                            android:id="@+id/btn_send_comment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector"
                            android:drawableRight="@drawable/ic_complaint_2"
                            android:padding="3dp"
                            android:text="@string/btn_send_comment"
                            android:textColor="@android:color/white" />

                    </com.balysv.materialripple.MaterialRippleLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:indeterminate="false"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>